--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <h2>Achou interessante?</h2>
             <p>Entre em contato pelo formulário e siga nas redes socias.</p>
             <div class="links-redes-sociais">
-                <a href="https://www.instagram.com/amandakrishnam/" target="_blank"><img src="/assets/instagram.svg">Instagram</a>
-                <a href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img src="/assets/linkedin.svg">Linkedin</a>
-                <a href="https://github.com/amandakrishnam" target="_blank"><img src="assets/github.svg">Github</a>
+                <a href="https://www.instagram.com/amandakrishnam/" target="_blank"><img src="instagram.svg">Instagram</a>
+                <a href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img src="linkedin.svg">Linkedin</a>
+                <a href="https://github.com/amandakrishnam" target="_blank"><img src="github.svg">Github</a>
             </div>
         </div>
 
