--- a/index.html
+++ b/index.html
@@ -4,26 +4,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <!-- adicionar logo  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">    
     <title>Amanda Design</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
     <nav>
         <div class="nav-titulo">
-            <a class="menu-destaque">Amanda</a>
+            <h1><a class="menu-destaque" href="#">Amanda</a></h1>
         </div>
 
         <div class="nav-menu">
             <ul>
                 <li><a class="menu-destaque">Projetos</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </div>
     </nav>
 
-    <section id="sobre" class="sobre">
+    <section id="projetos" class="secao-projetos">
+        <p>Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha conhecer meus trabalhos!</span></p>
+        <h2>Front-End</h2>
+
+        <!-- Exemplo -->
+
+        <div class="container row mx-auto g-4 justify-content-center">
+
+            <div class="col-6 col-md-4 col-xxl-2">
+              <div class="card">
+                <img class="bd-placeholder-img card-img-top" width="100%" height="180" src="site1.png"
+                  role="img" preserveAspectRatio="xMidYMid slice" focusable="false">
+                  <rect width="100%" height="100%"></rect>
+                </img>
+                <div class="card-header">
+                  <p>
+                    HTML | CSS
+                  </p>
+                </div>
+              </div>
+            </div>
+        
+            <div class="col-6 col-md-4 col-xxl-2">
+              <div class="card">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
+                  role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+                  <title>Placeholder</title>
+                  <rect width="100%" height="100%" fill="#868e96"></rect>
+                  <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+                </svg>
+                <div class="card-header">
+                  <p class="text-center">
+                    Categoria
+                  </p>
+                </div>
+              </div>
+            </div>
+        
+            <div class="col-6 col-md-4 col-xxl-2">
+              <div class="card">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
+                  role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+                  <title>Placeholder</title>
+                  <rect width="100%" height="100%" fill="#868e96"></rect>
+                  <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+                </svg>
+                <div class="card-header">
+                  <p class="text-center">
+                    Categoria
+                  </p>
+                </div>
+              </div>
+            </div>
+        </div>
+
+            <!-- Exemplo -->
+
+        <h2>UX/UI Design</h2>
+    </section>
+
+    <section id="sobre" class="secao-sobre">
 
     </section>
 
@@ -48,7 +112,7 @@
                     Email: <input type="email" placeholder="email@email.com" id="email" autocomplete="email">
                     Telefone: <input type="tel" placeholder="(XX) XXXXX-XXXX" id="telefone" autocomplete="tel">
                     Mensagem: <textarea placeholder="Digite sua mensagem" id="mensagem"></textarea>
-                    <button type="submit">Enviar</button>
+                    <button type="submit" class="botao">Enviar</button>
                 </form>
             </div>
         </div>
