--- a/index.html
+++ b/index.html
@@ -2,89 +2,54 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- adicionar logo  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">    
-    <title>Amanda Design</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- adicionar logo  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <title>Amanda Design</title>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
+  <div>
     <nav>
-        <div class="nav-titulo">
-            <h1><a class="menu-destaque" href="#">Amanda</a></h1>
-        </div>
+      <div class="nav-titulo">
+        <h1><a class="menu-destaque" href="#">Amanda</a></h1>
+      </div>
 
-        <div class="nav-menu">
-            <ul>
-                <li><a class="menu-destaque">Projetos</a></li>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </div>
+      <div class="nav-menu">
+        <ul>
+          <li><a class="menu-destaque" href="#projetos">Projetos</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </div>
     </nav>
 
+
     <section id="projetos" class="secao-projetos">
-        <p>Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha conhecer meus trabalhos!</span></p>
-        <h2>Front-End</h2>
+      <p>Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha conhecer meus trabalhos!</span>
+      </p>
+      <!-- Exemplo -->
 
-        <!-- Exemplo -->
-
-        <div class="container row mx-auto g-4 justify-content-center">
-
-            <div class="col-6 col-md-4 col-xxl-2">
-              <div class="card">
-                <img class="bd-placeholder-img card-img-top" width="100%" height="180" src="site1.png"
-                  role="img" preserveAspectRatio="xMidYMid slice" focusable="false">
-                  <rect width="100%" height="100%"></rect>
-                </img>
-                <div class="card-header">
-                  <p>
-                    HTML | CSS
-                  </p>
-                </div>
-              </div>
-            </div>
-        
-            <div class="col-6 col-md-4 col-xxl-2">
-              <div class="card">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-                  role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-                  <title>Placeholder</title>
-                  <rect width="100%" height="100%" fill="#868e96"></rect>
-                  <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                </svg>
-                <div class="card-header">
-                  <p class="text-center">
-                    Categoria
-                  </p>
-                </div>
-              </div>
-            </div>
-        
-            <div class="col-6 col-md-4 col-xxl-2">
-              <div class="card">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-                  role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-                  <title>Placeholder</title>
-                  <rect width="100%" height="100%" fill="#868e96"></rect>
-                  <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                </svg>
-                <div class="card-header">
-                  <p class="text-center">
-                    Categoria
-                  </p>
-                </div>
-              </div>
-            </div>
+      <div class="todos-projetos">
+        <div>
+          <h3>Front-End</h3>
+          <a href="https://github.com/amandakrishnam/portfolio" target="_blank"><img src="/assets/portfolio.svg"
+              width="1000" height="619" alt="foto da tela principal do site desenvolvido"></a>
         </div>
 
-            <!-- Exemplo -->
+        <div>
+          <h3>UX/UI Design</h3>
+          <a href="https://designux.notion.site/Amanda-Krishna-Miranda-Santos-0b2c252fcd5a4551a4e90b882ff0e1ab?pvs=4"
+            target="_blank"><img src="/assets/comunipets.svg" width="1000" height="619"
+              alt="foto da tela principal do site desenvolvido"></a>
+        </div>
+      </div>
 
-        <h2>UX/UI Design</h2>
+      <!-- Exemplo -->
     </section>
 
     <section id="sobre" class="secao-sobre">
@@ -93,30 +58,31 @@
 
     <section id="contato" class="secao-contato">
 
-        <div class="contato-main">
-            <h2>Achou interessante?</h2>
-            <p>Entre em contato pelo formulário e siga nas redes socias.</p>
-            <div class="links-redes-sociais">
-                <a href="https://www.instagram.com/amandakrishnam/" target="_blank"><img src="instagram.svg">Instagram</a>
-                <a href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img src="linkedin.svg">Linkedin</a>
-                <a href="https://github.com/amandakrishnam" target="_blank"><img src="github.svg">Github</a>
-            </div>
+      <div class="contato-main">
+        <h2>Achou interessante?</h2>
+        <p>Entre em contato pelo formulário e siga nas redes socias.</p>
+        <div class="links-redes-sociais">
+          <a href="https://www.instagram.com/amandakrishnam/" target="_blank"><img src="instagram.svg">Instagram</a>
+          <a href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img src="linkedin.svg">Linkedin</a>
+          <a href="https://github.com/amandakrishnam" target="_blank"><img src="github.svg">Github</a>
         </div>
+      </div>
 
-        <hr>
+      <hr>
 
-        <div class="contato-formulario">
-            <div>
-                <form>
-                    Nome: <input type="text" placeholder="Nome" id="nome" autocomplete="name">
-                    Email: <input type="email" placeholder="email@email.com" id="email" autocomplete="email">
-                    Telefone: <input type="tel" placeholder="(XX) XXXXX-XXXX" id="telefone" autocomplete="tel">
-                    Mensagem: <textarea placeholder="Digite sua mensagem" id="mensagem"></textarea>
-                    <button type="submit" class="botao">Enviar</button>
-                </form>
-            </div>
+      <div class="contato-formulario">
+        <div>
+          <form>
+            Nome: <input type="text" placeholder="Nome" id="nome" autocomplete="name">
+            Email: <input type="email" placeholder="email@email.com" id="email" autocomplete="email">
+            Telefone: <input type="tel" placeholder="(XX) XXXXX-XXXX" id="telefone" autocomplete="tel">
+            Mensagem: <textarea placeholder="Digite sua mensagem" id="mensagem"></textarea>
+            <button type="submit" class="botao">Enviar</button>
+          </form>
         </div>
+      </div>
     </section>
+  </div>
 </body>
 
 </html>
