--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- adicionar logo  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style/style.css">
   <title>Amanda Design</title>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -32,8 +32,6 @@
     <section id="projetos" class="secao-projetos">
       <p>Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha conhecer meus trabalhos!</span>
       </p>
-      <!-- Exemplo -->
-
       <div class="todos-projetos">
         <div>
           <h3>Front-End</h3>
@@ -45,15 +43,13 @@
           <h3>UX/UI Design</h3>
           <a href="https://designux.notion.site/Amanda-Krishna-Miranda-Santos-0b2c252fcd5a4551a4e90b882ff0e1ab?pvs=4"
             target="_blank"><img src="/assets/comunipets.svg" width="1000" height="619"
-              alt="foto da tela principal do site desenvolvido"></a>
+              alt="foto da capa do projeto comunipets"></a>
         </div>
       </div>
-
-      <!-- Exemplo -->
     </section>
 
     <section id="sobre" class="secao-sobre">
-
+      <h2>Sobre mim</h2>
     </section>
 
     <section id="contato" class="secao-contato">
@@ -62,9 +58,9 @@
         <h2>Achou interessante?</h2>
         <p>Entre em contato pelo formulário e siga nas redes socias.</p>
         <div class="links-redes-sociais">
-          <a href="https://www.instagram.com/amandakrishnam/" target="_blank"><img src="instagram.svg">Instagram</a>
-          <a href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img src="linkedin.svg">Linkedin</a>
-          <a href="https://github.com/amandakrishnam" target="_blank"><img src="github.svg">Github</a>
+          <a href="https://www.instagram.com/amandakrishnam/" target="_blank"><img src="/assets/instagram.svg">Instagram</a>
+          <a href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img src="/assets/linkedin.svg">Linkedin</a>
+          <a href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg">Github</a>
         </div>
       </div>
 
