--- a/index.html
+++ b/index.html
@@ -16,31 +16,31 @@
   <div>
     <nav>
       <div class="nav-titulo">
-        <h1><a class="menu-destaque" href="#">Amanda</a></h1>
+        <h1><a class="menu-destaque" href="index.html">Amanda</a></h1>
       </div>
 
       <div class="nav-menu">
         <ul>
-          <li><a class="menu-destaque" href="#projetos">Projetos</a></li>
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#contato">Contato</a></li>
+          <li><a class="menu-destaque" href="index.html">Projetos</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="contato.html">Contato</a></li>
         </ul>
       </div>
     </nav>
 
 
     <section id="projetos" class="secao-projetos">
-      <p>Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha conhecer meus trabalhos!</span>
+      <p class="paragrafo-destaque">Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha conhecer meus trabalhos!</span>
       </p>
       <div class="todos-projetos">
         <div>
-          <h3>Front-End</h3>
+          <h3 class="projeto-titulo">Front-End</h3>
           <a href="https://github.com/amandakrishnam/portfolio" target="_blank"><img src="/assets/portfolio.svg"
               width="1000" height="619" alt="foto da tela principal do site desenvolvido"></a>
         </div>
 
         <div>
-          <h3>UX/UI Design</h3>
+          <h3 class="projeto-titulo">UX/UI Design</h3>
           <a href="https://designux.notion.site/Amanda-Krishna-Miranda-Santos-0b2c252fcd5a4551a4e90b882ff0e1ab?pvs=4"
             target="_blank"><img src="/assets/comunipets.svg" width="1000" height="619"
               alt="foto da capa do projeto comunipets"></a>
@@ -48,11 +48,12 @@
       </div>
     </section>
 
-    <section id="sobre" class="secao-sobre">
-      <h2>Sobre mim</h2>
-    </section>
+    <!-- <section id="sobre" class="secao-sobre">
+      <h3>Desenvolvedor(a) iniciante focado(a) em criar páginas web responsivas e funcionais.</h3>
+      <span class="sub-sobre">Aprimorando habilidades em front-end para entregar soluções web modernas, com foco em design responsivo e usabilidade e com aprendizado contínuo em HTML, CSS e JavaScript.</span>
+    </section> -->
 
-    <section id="contato" class="secao-contato">
+    <!-- <section id="contato" class="secao-contato">
 
       <div class="contato-main">
         <h2>Achou interessante?</h2>
@@ -78,7 +79,7 @@
         </div>
       </div>
     </section>
-  </div>
+  </div> -->
 </body>
 
 </html>
