overflow-x: hidden adicionado no body para retirar rolagem horizontal

--- a/sobre.html
+++ b/sobre.html
@@ -11,16 +11,18 @@
 <body>
     <div></div>
     <nav>
-        <div class="nav-titulo">
-            <h1><a class="menu-destaque" href="index.html">Amanda</a></h1>
-        </div>
+        <div class="menu"> <!--classe de teste-->
+            <div class="nav-titulo">
+                <h1><a class="menu-destaque" href="index.html">Amanda</a></h1>
+            </div>
 
-        <div class="nav-menu">
-            <ul>
-                <li><a class="menu-destaque" href="index.html">Projetos</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
+            <div class="nav-menu">
+                <ul>
+                    <li><a class="menu-destaque" href="index.html">Projetos</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
