Revert "overflow-x: hidden adicionado no body para retirar rolagem horizontal"
This reverts commit f84f45b57af8b59a65401450907719803d2626f6.

--- a/contato.html
+++ b/contato.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style/style.css">
-  <title>Contato</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style/style.css">
+    <title>Contato</title>
 </head>
-
 <body>
   <div></div>
-  <nav>
-    <div class="menu"> <!--classe de teste-->
+    <nav>
       <div class="nav-titulo">
         <h1><a class="menu-destaque" href="index.html">Amanda</a></h1>
       </div>
@@ -23,39 +20,34 @@
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </div>
+    </nav>
+
+    <section id="contato" class="secao-contato">
+
+        <div class="contato-main">
+          <h2>Achou interessante?</h2>
+          <p>Entre em contato pelo formulário e siga nas redes socias.</p>
+          <div class="links-redes-sociais">
+            <a href="https://www.instagram.com/amandakrishnam/" target="_blank"><img src="/assets/instagram.svg">Instagram</a>
+            <a href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img src="/assets/linkedin.svg">Linkedin</a>
+            <a href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg">Github</a>
+          </div>
+        </div>
+  
+        <hr>
+  
+        <div class="contato-formulario">
+          <div>
+            <form>
+              Nome: <input type="text" placeholder="Nome" id="nome" autocomplete="name">
+              Email: <input type="email" placeholder="email@email.com" id="email" autocomplete="email">
+              Telefone: <input type="tel" placeholder="(XX) XXXXX-XXXX" id="telefone" autocomplete="tel">
+              Mensagem: <textarea placeholder="Digite sua mensagem" id="mensagem"></textarea>
+              <button type="submit" class="botao">Enviar</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </div>
-
-  </nav>
-
-  <section id="contato" class="secao-contato">
-
-    <div class="contato-main">
-      <h2>Achou interessante?</h2>
-      <p>Entre em contato pelo formulário e siga nas redes socias.</p>
-      <div class="links-redes-sociais">
-        <a href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
-            src="/assets/instagram.svg">Instagram</a>
-        <a href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
-            src="/assets/linkedin.svg">Linkedin</a>
-        <a href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg">Github</a>
-      </div>
-    </div>
-
-    <hr>
-
-    <div class="contato-formulario">
-      <div>
-        <form>
-          Nome: <input type="text" placeholder="Nome" id="nome" autocomplete="name">
-          Email: <input type="email" placeholder="email@email.com" id="email" autocomplete="email">
-          Telefone: <input type="tel" placeholder="(XX) XXXXX-XXXX" id="telefone" autocomplete="tel">
-          Mensagem: <textarea placeholder="Digite sua mensagem" id="mensagem"></textarea>
-          <button type="submit" class="botao">Enviar</button>
-        </form>
-      </div>
-    </div>
-  </section>
-  </div>
 </body>
-
 </html>
