Revert "media query pagina projetos"
This reverts commit 06a80b53007a20b0b9fe33b5a101040072db5bcd.

--- a/index.html
+++ b/index.html
@@ -30,26 +30,56 @@
 
 
     <section id="projetos" class="secao-projetos">
-      <div class="projetos-texto">
-        <p class="paragrafo-destaque">Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha
-            conhecer meus trabalhos!</span>
-        </p>
-      </div>
+      <p class="paragrafo-destaque">Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha conhecer meus trabalhos!</span>
+      </p>
       <div class="todos-projetos">
         <div>
           <h3 class="projeto-titulo">Front-End</h3>
-          <a href="https://github.com/amandakrishnam/portfolio" target="_blank"><img class="imagem-projetos"
-              src="/assets/portfolio.svg" alt="foto da tela principal do site desenvolvido"></a>
+          <a href="https://github.com/amandakrishnam/portfolio" target="_blank"><img src="/assets/portfolio.svg"
+              width="1000" height="619" alt="foto da tela principal do site desenvolvido"></a>
         </div>
 
         <div>
           <h3 class="projeto-titulo">UX/UI Design</h3>
           <a href="https://designux.notion.site/Amanda-Krishna-Miranda-Santos-0b2c252fcd5a4551a4e90b882ff0e1ab?pvs=4"
-            target="_blank"><img class="imagem-projetos" src="/assets/comunipets.svg"
+            target="_blank"><img src="/assets/comunipets.svg" width="1000" height="619"
               alt="foto da capa do projeto comunipets"></a>
         </div>
       </div>
     </section>
+
+    <!-- <section id="sobre" class="secao-sobre">
+      <h3>Desenvolvedor(a) iniciante focado(a) em criar páginas web responsivas e funcionais.</h3>
+      <span class="sub-sobre">Aprimorando habilidades em front-end para entregar soluções web modernas, com foco em design responsivo e usabilidade e com aprendizado contínuo em HTML, CSS e JavaScript.</span>
+    </section> -->
+
+    <!-- <section id="contato" class="secao-contato">
+
+      <div class="contato-main">
+        <h2>Achou interessante?</h2>
+        <p>Entre em contato pelo formulário e siga nas redes socias.</p>
+        <div class="links-redes-sociais">
+          <a href="https://www.instagram.com/amandakrishnam/" target="_blank"><img src="/assets/instagram.svg">Instagram</a>
+          <a href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img src="/assets/linkedin.svg">Linkedin</a>
+          <a href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg">Github</a>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="contato-formulario">
+        <div>
+          <form>
+            Nome: <input type="text" placeholder="Nome" id="nome" autocomplete="name">
+            Email: <input type="email" placeholder="email@email.com" id="email" autocomplete="email">
+            Telefone: <input type="tel" placeholder="(XX) XXXXX-XXXX" id="telefone" autocomplete="tel">
+            Mensagem: <textarea placeholder="Digite sua mensagem" id="mensagem"></textarea>
+            <button type="submit" class="botao">Enviar</button>
+          </form>
+        </div>
+      </div>
+    </section>
+  </div> -->
 </body>
 
 </html>
