--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
 
 
     <section id="projetos" class="secao-projetos">
-      <p class="paragrafo-destaque">Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha conhecer meus trabalhos!</span>
+      <p class="paragrafo-destaque">Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha
+          conhecer meus trabalhos!</span>
       </p>
       <div class="todos-projetos">
         <div>
           <h3 class="projeto-titulo">Front-End</h3>
           <a href="https://github.com/amandakrishnam/portfolio" target="_blank"><img src="/assets/portfolio.svg"
-              width="1000" height="619" alt="foto da tela principal do site desenvolvido"></a>
+              alt="foto da tela principal do site desenvolvido" class="projeto-imagem"></a>
         </div>
 
         <div>
           <h3 class="projeto-titulo">UX/UI Design</h3>
           <a href="https://designux.notion.site/Amanda-Krishna-Miranda-Santos-0b2c252fcd5a4551a4e90b882ff0e1ab?pvs=4"
-            target="_blank"><img src="/assets/comunipets.svg" width="1000" height="619"
-              alt="foto da capa do projeto comunipets"></a>
+            target="_blank"><img src="/assets/comunipets.svg" alt="foto da capa do projeto comunipets" class="projeto-imagem"></a>
         </div>
       </div>
     </section>
