ta funcionando to mandando

--- a/index.html
+++ b/index.html
@@ -29,31 +29,31 @@
     </nav>
 
 
-    <section id="projetos" class="secao-projetos">
+    <section class="secao-projetos">
       <p class="paragrafo-destaque">Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha
           conhecer meus trabalhos!</span>
       </p>
-      <div class="todos-projetos">
-        <div>
-          <h3 class="projeto-titulo">Front-End</h3>
-          <a href="https://github.com/amandakrishnam/portfolio" target="_blank"><img src="/assets/portfolio.svg"
-              alt="foto da tela principal do site desenvolvido" class="projeto-imagem"></a>
-        </div>
-
-        <div>
-          <h3 class="projeto-titulo">UX/UI Design</h3>
-          <a href="https://designux.notion.site/Amanda-Krishna-Miranda-Santos-0b2c252fcd5a4551a4e90b882ff0e1ab?pvs=4"
-            target="_blank"><img src="/assets/comunipets.svg" alt="foto da capa do projeto comunipets" class="projeto-imagem"></a>
-        </div>
+      <div class="projeto">
+        <h3 class="projeto-titulo">Front-End</h3>
+        <!-- <a href="https://github.com/amandakrishnam/portfolio" target="_blank"><img src="/assets/portfolio.svg"
+            alt="foto da tela principal do site desenvolvido" class="projeto-imagem"></a> -->
       </div>
-    </section>
 
-    <!-- <section id="sobre" class="secao-sobre">
+      <div class="projeto">
+        <h3 class="projeto-titulo">UX/UI Design</h3>
+        <!-- <a href="https://designux.notion.site/Amanda-Krishna-Miranda-Santos-0b2c252fcd5a4551a4e90b882ff0e1ab?pvs=4"
+          target="_blank"><img src="/assets/comunipets.svg" alt="foto da capa do projeto comunipets"
+            class="projeto-imagem"></a> -->
+      </div>
+  </div>
+  </section>
+
+  <!-- <section id="sobre" class="secao-sobre">
       <h3>Desenvolvedor(a) iniciante focado(a) em criar páginas web responsivas e funcionais.</h3>
       <span class="sub-sobre">Aprimorando habilidades em front-end para entregar soluções web modernas, com foco em design responsivo e usabilidade e com aprendizado contínuo em HTML, CSS e JavaScript.</span>
     </section> -->
 
-    <!-- <section id="contato" class="secao-contato">
+  <!-- <section id="contato" class="secao-contato">
 
       <div class="contato-main">
         <h2>Achou interessante?</h2>
