--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </p>
       <div class="projeto">
         <h3 class="projeto-titulo">Front-End</h3>
-        <!-- <a href="https://github.com/amandakrishnam/portfolio" target="_blank"><img src="/assets/portfolio.svg"
-            alt="foto da tela principal do site desenvolvido" class="projeto-imagem"></a> -->
+        <a href="https://github.com/amandakrishnam/portfolio" target="_blank"><img src="/assets/portfolio.svg"
+            alt="foto da tela principal do site desenvolvido" class="projeto-imagem"></a>
       </div>
 
       <div class="projeto">
