imagem sem comentário

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
       <div class="projeto">
         <h3 class="projeto-titulo">UX/UI Design</h3>
-        <!-- <a href="https://designux.notion.site/Amanda-Krishna-Miranda-Santos-0b2c252fcd5a4551a4e90b882ff0e1ab?pvs=4"
+        <a href="https://designux.notion.site/Amanda-Krishna-Miranda-Santos-0b2c252fcd5a4551a4e90b882ff0e1ab?pvs=4"
           target="_blank"><img src="/assets/comunipets.svg" alt="foto da capa do projeto comunipets"
-            class="projeto-imagem"></a> -->
+            class="projeto-imagem"></a>
       </div>
   </div>
   </section>
