--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
   <link rel="stylesheet" href="/style/style.css">
   <title>Amanda Design</title>
+  <link rel="icon" type="image/x-icon" href="/assets/backpack4-fill.svg">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
