--- a/index.html
+++ b/index.html
@@ -16,22 +16,17 @@
 <body>
   <div>
     <nav>
-      <div class="nav-titulo">
-        <h1><a class="menu-destaque" href="index.html">Amanda</a></h1>
-      </div>
-
       <div class="nav-menu">
         <ul>
-          <li><a class="menu-destaque" href="index.html">Projetos</a></li>
+          <li><a href="index.html">Projetos</a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </div>
     </nav>
 
-
     <section class="secao-projetos">
-      <p class="paragrafo-destaque">Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha
+      <p>Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha
           conhecer meus trabalhos!</span>
       </p>
       <div class="projeto">
@@ -49,6 +44,20 @@
       </div>
   </div>
   </section>
+
+  <footer>
+    <div class="rodape">
+        <p class="texto-rodape">Desenvolvido por Amanda Krishna</p>
+        <div class="icones-rodape">
+            <a class="icone-rodape" href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
+                    src="/assets/instagram.svg" alt="Instagram" width="24px"></a>
+            <a class="icone-rodape" href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
+                    src="/assets/linkedin.svg" alt="LinkedIn" width="24px"></a>
+            <a class="icone-rodape" href="https://github.com/amandakrishnam" target="_blank"><img
+                    src="/assets/github.svg" alt="GitHub" width="24px"></a>
+        </div>
+    </div>
+</footer>
 </body>
 
 </html>
