--- a/sobre.html
+++ b/sobre.html
@@ -1,59 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="icon" type="image/x-icon" href="/assets/backpack4-fill.svg">
     <title>Sobre mim</title>
 </head>
 
 <body>
-    <div>
-        <nav>
-            <div class="nav-titulo">
-                <h1><a class="menu-destaque" href="index.html">Amanda</a></h1>
-            </div>
+    <nav>
+        <div class="nav-menu">
+            <ul>
+                <li><a class="menu-destaque" href="index.html">Projetos</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </div>
+    </nav>
 
-            <div class="nav-menu">
-                <ul>
-                    <li><a class="menu-destaque" href="index.html">Projetos</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                </ul>
-            </div>
-        </nav>
-
+    <div class="container">
         <div class="apresentacao">
             <section class="apresentacao-conteudo">
                 <div class="apresentacao-conteudo-div">
-                    <h3 class="apresentacao-conteudo-titulo">Desenvolvedor(a) iniciante focado(a) em criar páginas web
+                    <h3>Desenvolvedora iniciante focada em criar páginas web
                         responsivas e funcionais.</h3>
-                    <p class="apresentacao-conteudo-texto">Aprimorando habilidades em front-end para entregar soluções
+                    <p>Aprimorando habilidades em front-end para entregar soluções
                         web
                         modernas, com
                         foco
-                        em design responsivo e usabilidade e com aprendizado contínuo em HTML, CSS e JavaScript.</p>
+                        em design responsivo e usabilidade.</p>
+
+                    <h4>Minha trajetória</h4>
+                    <p>Formada em Análise e Desenvolvimento pela FATEC, com cursos na área de UX/UI Design pela
+                        Cubos Academy e Front-End pela Alura. Desde
+                        2019 atuando como docente na área de Tecnologia da Informação.</p>
                 </div>
-                <div class="apresentacao-conteudo-educacao">
-                    <div class="apresentacao-educacao">
-                        <h4>Educação</h4>
-                        <h5>2015-2018</h5>
-                        <p>Análise e Desenvolvimento de Sistemas</p>
-                        <p>FATEC - Itapetininga, SP</p>
+
+                <div class="container-chip">
+                    <div class="chip">
+                        HTML5
                     </div>
-                    <div class="apresentacao-educacao">
-                        <h5>2023</h5>
-                        <p>UX/UI Design</p>
-                        <p>Cubos Academy</p>
+                    <div class="chip">
+                        CSS3
+                    </div>
+                    <div class="chip">
+                        Bootstrap
+                    </div>
+                    <div class="chip">
+                        Wireframe
+                    </div>
+                    <div class="chip">
+                        Miro
+                    </div>
+                    <div class="chip">
+                        Figma
+                    </div>
+                    <div class="chip">
+                        Figjam
                     </div>
                 </div>
 
             </section>
-            <img class="foto-sobre" src="/assets/foto.svg" alt="" width="400">
-
-            </main>
+            <img class="foto-sobre" src="/assets/foto.svg" alt="">
         </div>
+    </div>
+
+    <footer>
+        <div class="rodape">
+            <p class="texto-rodape">Desenvolvido por Amanda Krishna</p>
+            <div class="icones-rodape">
+                <a class="icone-rodape" href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
+                        src="/assets/instagram.svg" alt="Instagram" width="24px"></a>
+                <a class="icone-rodape" href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
+                        src="/assets/linkedin.svg" alt="LinkedIn" width="24px"></a>
+                <a class="icone-rodape" href="https://github.com/amandakrishnam" target="_blank"><img
+                        src="/assets/github.svg" alt="GitHub" width="24px"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
