--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- adicionar logo  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+  <!-- <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="/style/style.css">
   <title>Amanda Design</title>
   <link rel="icon" type="image/x-icon" href="/assets/backpack4-fill.svg">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
 </head>
 
 <body>
-  <div>
-    <nav>
-      <div class="nav-menu">
-        <ul>
-          <li><a href="index.html">Projetos</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="contato.html">Contato</a></li>
-        </ul>
-      </div>
-    </nav>
+  <!-- <div> -->
+  <nav>
+    <div class="nav-menu">
+      <ul>
+        <li><a href="index.html">Projetos</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </div>
+  </nav>
 
-    <section class="secao-projetos">
+  <!-- <section class="secao-projetos">
       <p>Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha
           conhecer meus trabalhos!</span>
       </p>
@@ -43,21 +43,58 @@
             class="projeto-imagem"></a>
       </div>
   </div>
-  </section>
+  </section> -->
+
+  <main>
+    <section id="principal">
+      <h2>Transformando Ideias em Experiências Digitais</h2>
+      <p class="descricao">Conheça alguns dos meus principais projetos em Front-end</p>
+
+      <div class="container-cards">
+        <div class="card">
+          <img
+            src="https://images.pexels.com/photos/577585/pexels-photo-577585.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="Avatar" style="width:100%">
+          <div class="container">
+            <p class="descricao-card">Portolio Alura</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            src="https://images.pexels.com/photos/574069/pexels-photo-574069.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="Avatar" style="width:100%">
+          <div class="container">
+            <p class="descricao-card">Loja meteora</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            src="https://images.pexels.com/photos/574069/pexels-photo-574069.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="Avatar" style="width:100%">
+          <div class="container">
+            <p class="descricao-card">Landing Page Cafeteria</p>
+          </div>
+        </div>
+      </div>
+
+    </section>
+  </main>
 
   <footer>
     <div class="rodape">
-        <p class="texto-rodape">Desenvolvido por Amanda Krishna</p>
-        <div class="icones-rodape">
-            <a class="icone-rodape" href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
-                    src="/assets/instagram.svg" alt="Instagram" width="24px"></a>
-            <a class="icone-rodape" href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
-                    src="/assets/linkedin.svg" alt="LinkedIn" width="24px"></a>
-            <a class="icone-rodape" href="https://github.com/amandakrishnam" target="_blank"><img
-                    src="/assets/github.svg" alt="GitHub" width="24px"></a>
-        </div>
-    </div>
-</footer>
+      <p class="texto-rodape">Desenvolvido por Amanda Krishna</p>
+      <div class="icones-rodape">
+        <a class="icone-rodape" href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
+            src="/assets/instagram.svg" alt="Instagram" width="24px"></a>
+        <a class="icone-rodape" href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
+            src="/assets/linkedin.svg" alt="LinkedIn" width="24px"></a>
+        <a class="icone-rodape" href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg"
+            alt="GitHub" width="24px"></a>
+      </div>
+      <!-- </div> -->
+  </footer>
 </body>
 
 </html>
