--- a/sobre.html
+++ b/sobre.html
@@ -20,7 +20,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container-sobre">
         <div class="apresentacao">
             <section class="apresentacao-conteudo">
                 <div class="apresentacao-conteudo-div">
