classes não utilizadas

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
   <link rel="stylesheet" href="/style/style.css">
   <title>Amanda Design</title>
   <link rel="icon" type="image/x-icon" href="/assets/backpack4-fill.svg">
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
 </head>
 
 <body>
-  <!-- <div> -->
   <nav>
     <div class="nav-menu">
       <ul>
@@ -25,28 +23,7 @@
     </div>
   </nav>
 
-  <!-- <section class="secao-projetos">
-      <p>Eu sou Amanda, uma aspirante da tecnologia. <span class="texto-destaque">Venha
-          conhecer meus trabalhos!</span>
-      </p>
-      <div class="projeto">
-        <h3 class="projeto-titulo">Front-End</h3>
-        <a href="https://github.com/amandakrishnam/portfolio" target="_blank">
-          <img src="/assets/portfolio.svg" alt="foto da tela principal do site desenvolvido" class="projeto-imagem">
-        </a>
-      </div>
-
-      <div class="projeto">
-        <h3 class="projeto-titulo">UX/UI Design</h3>
-        <a href="https://designux.notion.site/Amanda-Krishna-Miranda-Santos-0b2c252fcd5a4551a4e90b882ff0e1ab?pvs=4"
-          target="_blank"><img src="/assets/comunipets.svg" alt="foto da capa do projeto comunipets"
-            class="projeto-imagem"></a>
-      </div>
-  </div>
-  </section> -->
-
-  <main>
-    <section id="principal">
+    <section class="secao-projetos">
       <h2>Transformando Ideias em Experiências Digitais</h2>
       <p class="descricao">Conheça alguns dos meus principais projetos em Front-end</p>
 
@@ -78,9 +55,7 @@
           </div>
         </div>
       </div>
-
     </section>
-  </main>
 
   <footer>
     <div class="rodape">
@@ -93,7 +68,6 @@
         <a class="icone-rodape" href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg"
             alt="GitHub" width="24px"></a>
       </div>
-      <!-- </div> -->
   </footer>
 </body>
 
