--- a/sobre.html
+++ b/sobre.html
@@ -20,54 +20,55 @@
         </div>
     </nav>
 
-    <div class="container-sobre">
-        <div class="apresentacao">
-            <section class="apresentacao-conteudo">
-                <div class="apresentacao-conteudo-div">
-                    <h3>Desenvolvedora iniciante focada em criar páginas web
-                        responsivas e funcionais.</h3>
-                    <p>Aprimorando habilidades em front-end para entregar soluções
-                        web
-                        modernas, com
-                        foco
-                        em design responsivo e usabilidade.</p>
+    <div class="apresentacao">
+        <section class="apresentacao-conteudo">
+            <div class="apresentacao-conteudo-div">
+                <h3>Desenvolvedora iniciante focada em criar páginas web
+                    responsivas e funcionais.</h3>
+                <p>Aprimorando habilidades em front-end para entregar soluções
+                    web
+                    modernas, com
+                    foco
+                    em design responsivo e usabilidade.</p>
 
-                    <h3>Minha trajetória</h3>
-                    <p>Formada em Análise e Desenvolvimento pela FATEC, com cursos na área de UX/UI Design pela
-                        Cubos Academy e Front-End pela Alura. Desde
-                        2019 atuando como docente na área de Tecnologia da Informação.</p>
+                <h3>Minha trajetória</h3>
+                <p>Formada em Análise e Desenvolvimento pela FATEC, com cursos na área de UX/UI Design pela
+                    Cubos Academy e Front-End pela Alura. Desde
+                    2019 atuando como docente na área de Tecnologia da Informação.</p>
+            </div>
+
+            <!-- Chips -->
+
+            <div class="container-chip">
+                <div class="chip">
+                    HTML5
                 </div>
-
-                <div class="container-chip">
-                    <div class="chip">
-                        HTML5
-                    </div>
-                    <div class="chip">
-                        CSS3
-                    </div>
-                    <div class="chip">
-                        Bootstrap
-                    </div>
-                    <div class="chip">
-                        Wireframe
-                    </div>
-                    <div class="chip">
-                        Miro
-                    </div>
-                    <div class="chip">
-                        Figma
-                    </div>
-                    <div class="chip">
-                        Figjam
-                    </div>
+                <div class="chip">
+                    CSS3
                 </div>
+                <div class="chip">
+                    Bootstrap
+                </div>
+                <div class="chip">
+                    Wireframe
+                </div>
+                <div class="chip">
+                    Miro
+                </div>
+                <div class="chip">
+                    Figma
+                </div>
+                <div class="chip">
+                    Figjam
+                </div>
+            </div>
 
-            </section>
-            <img class="foto-sobre" src="/assets/foto.svg" alt="">
-        </div>
+        </section>
+        <img class="foto-sobre" src="/assets/foto.svg" alt="">
     </div>
 
-    <footer>
+    <!-- Rodapé -->
+    <!-- <footer>
         <div class="rodape">
             <p class="texto-rodape">Desenvolvido por Amanda Krishna</p>
             <div class="icones-rodape">
@@ -79,7 +80,7 @@
                         src="/assets/github.svg" alt="GitHub" width="24px"></a>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
