--- a/contato.html
+++ b/contato.html
@@ -10,61 +10,63 @@
 </head>
 
 <body>
-  <nav>
-    <div class="nav-menu">
-      <ul>
-        <li><a href="index.html">Projetos</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <section class="secao-contato">
-    <div class="contato-main">
-      <h2>Achou interessante?</h2>
-      <p>Entre em contato pelo formulário e siga nas redes sociais.</p>
-      <div class="links-redes-sociais">
-        <a class="icone-contato" href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
-            src="/assets/instagram.svg" alt="Instagram" width="24px">Instagram</a>
-        <a class="icone-contato" href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
-            src="/assets/linkedin.svg" alt="LinkedIn" width="24px">LinkedIn</a>
-        <a class="icone-contato" href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg"
-            alt="GitHub" width="24px">GitHub</a>
+  <div class="tudo">
+    <nav>
+      <div class="nav-menu">
+        <ul>
+          <li><a href="index.html">Projetos</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
       </div>
-    </div>
+    </nav>
 
-    <hr class="linha-vertical">
-
-    <div class="contato-formulario">
-      <h2>Entre em contato!</h2>
-      <form>
-        <label for="nome">Nome:</label>
-        <input type="text" placeholder="Nome" id="nome" autocomplete="name">
-        <label for="email">Email:</label>
-        <input type="email" placeholder="email@email.com" id="email" autocomplete="email">
-        <label for="telefone">Telefone:</label>
-        <input type="tel" placeholder="(XX) XXXXX-XXXX" id="telefone" autocomplete="tel">
-        <label for="mensagem">Mensagem:</label>
-        <textarea placeholder="Digite sua mensagem" id="mensagem"></textarea>
-        <button type="submit" class="botao">Enviar</button>
-      </form>
-    </div>
-  </section>
-
-  <footer>
-    <div class="rodape">
-      <p class="texto-rodape">Desenvolvido por Amanda Krishna</p>
-      <div class="icones-rodape">
-        <a class="icone-rodape" href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
-            src="/assets/instagram.svg" alt="Instagram" width="24px"></a>
-        <a class="icone-rodape" href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
-            src="/assets/linkedin.svg" alt="LinkedIn" width="24px"></a>
-        <a class="icone-rodape" href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg"
-            alt="GitHub" width="24px"></a>
+    <section class="secao-contato">
+      <div class="contato-main">
+        <h2>Achou interessante?</h2>
+        <p>Entre em contato pelo formulário e siga nas redes sociais.</p>
+        <div class="links-redes-sociais">
+          <a class="icone-contato" href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
+              src="/assets/instagram.svg" alt="Instagram" width="24px">Instagram</a>
+          <a class="icone-contato" href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
+              src="/assets/linkedin.svg" alt="LinkedIn" width="24px">LinkedIn</a>
+          <a class="icone-contato" href="https://github.com/amandakrishnam" target="_blank"><img
+              src="/assets/github.svg" alt="GitHub" width="24px">GitHub</a>
+        </div>
       </div>
-    </div>
-  </footer>
+
+      <hr class="linha-vertical">
+
+      <div class="contato-formulario">
+        <h2>Entre em contato!</h2>
+        <form>
+          <label for="nome">Nome:</label>
+          <input type="text" placeholder="Nome" id="nome" autocomplete="name">
+          <label for="email">Email:</label>
+          <input type="email" placeholder="email@email.com" id="email" autocomplete="email">
+          <label for="telefone">Telefone:</label>
+          <input type="tel" placeholder="(XX) XXXXX-XXXX" id="telefone" autocomplete="tel">
+          <label for="mensagem">Mensagem:</label>
+          <textarea placeholder="Digite sua mensagem" id="mensagem"></textarea>
+          <button type="submit" class="botao">Enviar</button>
+        </form>
+      </div>
+    </section>
+
+    <!-- <footer>
+      <div class="rodape">
+        <p class="texto-rodape">Desenvolvido por Amanda Krishna</p>
+        <div class="icones-rodape">
+          <a class="icone-rodape" href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
+              src="/assets/instagram.svg" alt="Instagram" width="24px"></a>
+          <a class="icone-rodape" href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
+              src="/assets/linkedin.svg" alt="LinkedIn" width="24px"></a>
+          <a class="icone-rodape" href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg"
+              alt="GitHub" width="24px"></a>
+        </div>
+      </div>
+    </footer> -->
+  </div>
 </body>
 
 </html>
