--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- adicionar logo  -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/style/style.css">
   <title>Amanda Design</title>
   <link rel="icon" type="image/x-icon" href="/assets/backpack4-fill.svg">
@@ -22,41 +20,47 @@
     </div>
   </nav>
 
-    <section class="secao-projetos">
-      <h2>Transformando Ideias em Experiências Digitais</h2>
-      <p class="descricao">Conheça alguns dos meus principais projetos em Front-end</p>
+  <main>
+    <h2>Transformando Ideias em Experiências Digitais</h2>
+    <p class="descricao">Conheça alguns dos meus principais projetos em Front-end</p>
 
-      <div class="container-cards">
-        <div class="card">
+    <div class="container-cards">
+      <div class="card">
+        <a href="https://github.com/amandakrishnam/portfolio-alura-curso" target="_blank">
           <img
             src="https://images.pexels.com/photos/577585/pexels-photo-577585.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="Avatar" style="width:100%">
           <div class="container">
             <p class="descricao-card">Portolio Alura</p>
           </div>
-        </div>
+        </a>
+      </div>
 
-        <div class="card">
+      <div class="card">
+        <a href="https://github.com/amandakrishnam/portfolio-alura-curso" target="_blank">
           <img
             src="https://images.pexels.com/photos/574069/pexels-photo-574069.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="Avatar" style="width:100%">
           <div class="container">
             <p class="descricao-card">Loja meteora</p>
           </div>
-        </div>
+        </a>
+      </div>
 
-        <div class="card">
+      <div class="card">
+        <a href="https://github.com/amandakrishnam/portfolio-alura-curso" target="_blank">
           <img
             src="https://images.pexels.com/photos/574069/pexels-photo-574069.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="Avatar" style="width:100%">
           <div class="container">
             <p class="descricao-card">Landing Page Cafeteria</p>
           </div>
-        </div>
+        </a>
       </div>
-    </section>
+    </div>
+  </main>
 
-  <footer>
+  <!-- <footer>
     <div class="rodape">
       <p class="texto-rodape">Desenvolvido por Amanda Krishna</p>
       <div class="icones-rodape">
@@ -67,7 +71,7 @@
         <a class="icone-rodape" href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg"
             alt="GitHub" width="24px"></a>
       </div>
-  </footer>
+  </footer> -->
 </body>
 
 </html>
