o footer está de volta

--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-  <div class="tudo">
     <nav>
       <div class="nav-menu">
         <ul>
@@ -51,22 +50,21 @@
           <button type="submit" class="botao">Enviar</button>
         </form>
       </div>
-    </section>
 
-    <!-- <footer>
-      <div class="rodape">
-        <p class="texto-rodape">Desenvolvido por Amanda Krishna</p>
-        <div class="icones-rodape">
-          <a class="icone-rodape" href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
-              src="/assets/instagram.svg" alt="Instagram" width="24px"></a>
-          <a class="icone-rodape" href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
-              src="/assets/linkedin.svg" alt="LinkedIn" width="24px"></a>
-          <a class="icone-rodape" href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg"
-              alt="GitHub" width="24px"></a>
+      <footer>
+        <div class="rodape">
+          <p class="texto-rodape">Desenvolvido por Amanda Krishna</p>
+          <div class="icones-rodape">
+            <a class="icone-rodape" href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
+                src="/assets/instagram.svg" alt="Instagram" width="24px"></a>
+            <a class="icone-rodape" href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
+                src="/assets/linkedin.svg" alt="LinkedIn" width="24px"></a>
+            <a class="icone-rodape" href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg"
+                alt="GitHub" width="24px"></a>
+          </div>
         </div>
-      </div>
-    </footer> -->
-  </div>
+      </footer>
+    </section>    
 </body>
 
 </html>
