--- a/index.html
+++ b/index.html
@@ -58,20 +58,21 @@
         </a>
       </div>
     </div>
+    <footer>
+      <div class="rodape">
+        <p class="texto-rodape">Desenvolvido por Amanda Krishna</p>
+        <div class="icones-rodape">
+          <a class="icone-rodape" href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
+              src="/assets/instagram.svg" alt="Instagram" width="24px"></a>
+          <a class="icone-rodape" href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
+              src="/assets/linkedin.svg" alt="LinkedIn" width="24px"></a>
+          <a class="icone-rodape" href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg"
+              alt="GitHub" width="24px"></a>
+        </div>
+    </footer>
   </main>
 
-  <!-- <footer>
-    <div class="rodape">
-      <p class="texto-rodape">Desenvolvido por Amanda Krishna</p>
-      <div class="icones-rodape">
-        <a class="icone-rodape" href="https://www.instagram.com/amandakrishnam/" target="_blank"><img
-            src="/assets/instagram.svg" alt="Instagram" width="24px"></a>
-        <a class="icone-rodape" href="https://www.linkedin.com/in/amandakmiranda/" target="_blank"><img
-            src="/assets/linkedin.svg" alt="LinkedIn" width="24px"></a>
-        <a class="icone-rodape" href="https://github.com/amandakrishnam" target="_blank"><img src="/assets/github.svg"
-            alt="GitHub" width="24px"></a>
-      </div>
-  </footer> -->
+  
 </body>
 
 </html>
